Se agraga la sección de Integrantes

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             </div>
             <div class="col-md-4">
                 <div class="oMyCard">
-                    <h1>Guías Geogrficas</h1>
+                    <h1>Guías Geográficas</h1>
                     <img src="img/rana2.jpg" alt="rana">
                 </div>
             </div>
@@ -105,45 +105,58 @@
                 </div>
             </div>
 
-
     </ul>
-    <h3>Integrantes</h3>
-    <table>
-        <thead>
-            <tr>
-                <th>Rol</th>
-                <th>Nombre</th>
-            </tr>
 
-        </thead>
-        <tbody>
-            <tr>
-                <td>Desarrollador</td>
-                <td>Paula</td>
-            </tr>
-            <tr>
-                <td>Desarrollador</td>
-                <td>Danny</td>
-            </tr>
-            <tr>
-                <td>Diseñador</td>
-                <td>Bryan</td>
-            </tr>
-            <tr>
-                <td>Product owner</td>
-                <td>Elizabeth</td>
-            </tr>
-            <tr>
-                <td>Desarrollador</td>
-                <td>Santiago</td>
-            </tr>
-        </tbody>
 
-    </table>
+
 
     </dl>
 
+    <div class="container-cards">
+        <h2>INTEGRANTES</h2>
+        <div id="cardsImgId" class="card-group">
+            <hr>
+            <div class="card ">
+            <img src="img/Eli.jpg" class="card-img-top"  alt="Elizabeth">
+            <div class="card-body">
+                <h5 class="card-title">Elizabeth Borja Burbano</h5>
+                <p class="card-text">Scrum Master</p>
+            </div>
+            </div>
+            <div class="card">
+            <img src="img/Santiago.jpeg" class="card-img-top" alt="Santiago">
+            <div class="card-body">
+                <h5 class="card-title">Santiago Hurtado </h5>
+                <p class="card-text">Product Owner </p>
+            </div>
+            </div>
+            <div class="card">
+            <img src="img/Danny.jpeg" class="card-img-top" alt="Danny">
+            <div class="card-body">
+                <h5 class="card-title">Danny Castrillón</h5>
+                <p class="card-text">Desarrollador </p>
+            </div>
+            </div>
+            <div class="card">
+                <img src="img/Bryan.jpeg" class="card-img-top" alt="Bryan">
+                <div class="card-body">
+                <h5 class="card-title">Bryan Jaramillo Avila </h5>
+                <p class="card-text">Diseñador</p>
+                </div>
+            </div>
+            <div class="card">
+                <img src="img/Paula.jpeg" class="card-img-top" alt="Paula">
+                <div class="card-body">
+                <h5 class="card-title">Maria Paula Reyes Posada </h5>
+                <p class="card-text">Desarrolladora</p>
+                </div>
+            </div>
+        </div>
+    
+    </div>
+    
 </body>
+
 <footer>
 
 </footer>
