Sección de noticias actualizada

--- a/index.html
+++ b/index.html
@@ -78,37 +78,60 @@
     </table>
     
     <h3>Noticias</h3>
-    <ul class="miul">
-        <link rel="stylesheet" href="./main.css">
+
+
+    <div class="Seccion-noticias">
+        <div class="col">
+          <div class="Noticias">
+            <img src="imagen1.png" class="card-img-top" alt="...">
             <div class="Noticia">
-                <h4>Noticia 1</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-                    aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+              <h4 class="card-title">Noticia 1</h4>
+              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus iusto, vitae fugit, voluptas placeat delectus deserunt unde qui minima porro culpa. Laudantium totam eaque nostrum adipisci laboriosam, veritatis similique aperiam!
+              Veritatis perferendis cum, labore ea inventore placeat quae, pariatur possimus minus, maxime voluptatibus nesciunt architecto autem accusamus? Nihil doloribus dicta assumenda dolorem cupiditate corporis, rerum architecto ipsum in provident laborum?
+              Placeat earum eius blanditiis! Est, rem iure consequatur iste sed doloribus debitis, amet necessitatibus esse odit, possimus tenetur illo cupiditate dolores quasi? Unde dolor sequi quod optio ad cupiditate consequatur.
+              Possimus dolore facilis eaque laboriosam, tenetur saepe soluta similique labore eligendi reprehenderit voluptate nam culpa consectetur quae et distinctio iste, ipsum repellat debitis, impedit consequuntur excepturi? Nesciunt tempore excepturi quia?
                 </p>
             </div>
-
+          </div>
+        </div>
+        <div class="col">
+          <div class="Noticias">
+            <img src="imagen1.png" class="card-img-top" alt="...">
             <div class="Noticia">
-                <h4>Noticia 2</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-                    aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+              <h4 class="card-title">Noticia 2</h4>
+              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus iusto, vitae fugit, voluptas placeat delectus deserunt unde qui minima porro culpa. Laudantium totam eaque nostrum adipisci laboriosam, veritatis similique aperiam!
+              Veritatis perferendis cum, labore ea inventore placeat quae, pariatur possimus minus, maxime voluptatibus nesciunt architecto autem accusamus? Nihil doloribus dicta assumenda dolorem cupiditate corporis, rerum architecto ipsum in provident laborum?
+             </p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="Noticias">
+            <img src="imagen1.png" class="card-img-top" alt="...">
+            <div class="Noticia">
+              <h4 class="card-title">Noticia 3</h4>
+              <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto illo maiores a magnam sunt doloremque perspiciatis ducimus dolore! Nobis voluptatum natus porro unde dolorem ipsa dolorum tempore laudantium voluptatibus aspernatur.
+              Alias, quae magnam eveniet exercitationem repellat dicta omnis quasi nostrum assumenda eligendi sint explicabo blanditiis. Culpa harum quod earum! Debitis, inventore numquam consectetur iste eveniet cupiditate commodi consequatur nihil ratione.
+              Dolores ipsum laboriosam earum consequatur voluptate libero nobis illum accusamus nam hic. Saepe, ipsa neque eligendi quidem blanditiis, voluptatum reprehenderit facere animi error consectetur eos molestiae iusto! Ipsam, quisquam quod!
+              Id iste corporis numquam odit, eaque harum provident? Sed eligendi corporis voluptas id alias odio nostrum, iste necessitatibus totam aperiam hic dolorem deserunt quo accusamus iusto quis architecto dolore. Perferendis.
                 </p>
             </div>
-
+          </div>
+        </div>
+        <div class="col">
+          <div class="Noticias">
+            <img src="imagen1.png" class="card-img-top" alt="...">
             <div class="Noticia">
-                <h4>Noticia 3</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+              <h4 class="card-title">Noticia 4</h4>
+              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus iusto, vitae fugit, voluptas placeat delectus deserunt unde qui minima porro culpa. Laudantium totam eaque nostrum adipisci laboriosam, veritatis similique aperiam!
+              Veritatis perferendis cum, labore ea inventore placeat quae, pariatur possimus minus, maxime voluptatibus nesciunt architecto autem accusamus? Nihil doloribus dicta assumenda dolorem cupiditate corporis, rerum architecto ipsum in provident laborum?
+              Placeat earum eius blanditiis! Est, rem iure consequatur iste sed doloribus debitis, amet necessitatibus esse odit, possimus tenetur illo cupiditate dolores quasi? Unde dolor sequi quod optio ad cupiditate consequatur.
+              Possimus dolore facilis eaque laboriosam, tenetur saepe soluta similique labore eligendi reprehenderit voluptate nam culpa consectetur quae et distinctio iste, ipsum repellat debitis, impedit consequuntur excepturi? Nesciunt tempore excepturi quia?
                 </p>
             </div>
-
-            <div class="Noticia">
-                <h4>Noticia 4</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                </p>
-            </div>
-
-    </ul>
+          </div>
+        </div>
+      </div>
     
     <h3>Integrantes</h3>
     <table>
