--- a/index.html
+++ b/index.html
@@ -159,8 +159,40 @@
 
 <footer>
 
-</footer>
+        <div class="row letra-color-footer">
+            <div class="col-md-3"></div>
+            <div class="col-md-3">
+                <h6 class="text-uppercase fw-bold mb-4">
+                    más información
+                </h6>
+                <p>Link 1 </p>
+                <p>Link 2</p>
+                <p>Link 3 </p>
+            </div>
+            
+            <div class="col-md-3">
+            <h6 class="text-uppercase fw-bold mb-3">
+                Contacto
+            </h6>
+            <p><i class="fas fa-home me-3"></i> Cali, Colombia</p>
+            <p>
+                <i class="fas fa-envelope me-3"></i>
+                contacto@anura.com
+            </p>
+            <p><i class="fas fa-phone me-3"></i> + 57 317 567 88</p>
+            <p><i class="fas fa-print me-3"></i> + 57 312 567 89</p>
+        </div>
+            <div class="col-md-2"></div>
+        </div>
+    
 
+        <div class="container-fluid">
+            <div class="text-center p-4 fondo-footer-copy">
+            <p>&copy; Copyright 2021 - Anura Index</p>
+        </div>
+    </div>
+
+</footer>
 
 <!-- Optional JavaScript; choose one of the two! -->
 
